--- a/styles/style.css
+++ b/styles/style.css
@@ -29,3 +29,235 @@
   margin-right: 0;
   margin-top: 80px;
 }
+
+
+div {
+  border: 2px solid lightblue;
+}
+
+.logo {
+  display: flex;
+}
+
+.logo_place_header {
+  background-size: contain;
+  position: absolute;
+  width: 228px;
+  height: 32px;
+  background-image: url('/images/logo_place_header.svg');
+  background-repeat: no-repeat;
+  justify-content: start;
+  top: 30px;
+  left: 64px;
+  z-index: 3;
+}
+
+.header {
+  display: flex;
+  min-height: 600px;
+  min-width: 756px;
+  position: relative;
+  background-color: #f2f2f2 ;
+}
+
+.header__title {
+  position: absolute;
+  left: 64px;
+  width: 730px;
+  align-self: center;
+  z-index: 3;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: 600;
+}
+
+.header__subtitle {
+  position: absolute;
+  flex-direction: column;
+  align-self: flex-end;
+  width: 388px;
+  left: 64px;
+  bottom: 30px;
+  font-size: 18px;
+  line-height: 25px;
+  z-index: 3;
+  font-weight: normal;
+}
+
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+
+.header__main-illustration {
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  bottom: 0px;
+  right: 0;
+  z-index: 1;
+}
+
+.header__square-pic {
+  position: absolute;
+  background-color: #2f80ed ;
+  width: 568px;
+  height: 568px;
+  right: 0;
+  bottom: 0;
+  margin-top: 64px;
+  z-index: 0;
+}
+
+.content {
+  display: flex;
+  padding-top: 100px;
+
+  background-color: #f2f2f2;
+  justify-content: center;
+}
+
+.two-columns {
+  display: flex;
+  box-sizing: content-box;
+  width: 80%;
+  height: min-content;
+  border: 2px solid #2f80ed;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: flex-start;
+
+}
+
+.two-columns__brief {
+  color: #2f80ed;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  width: 175px;
+  margin-top: 0;
+}
+
+.two-columns__main-text {
+  flex-direction: column;
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  margin-top: 0;
+  margin-bottom: 30px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+
+.digits {
+  display: flex;
+  background-color: #f2f2f2 ;
+  padding: 100px 0 100px 0;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section-title {
+  text-align: center;
+  width: 60%;
+  margin-bottom: 20px;
+  margin-top: 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.section-subtitle {
+  text-align: center;
+  width: 60%;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  display: flex;
+  padding-top: 60px;
+  margin: 0 auto 0 auto;
+  width: 1100px;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 60px 0;
+}
+
+.table__cell {
+  width: 250px;
+}
+
+.table__heading {
+  margin: 0 0 20px 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.table__text:last-of-type {
+  margin-bottom: 0;
+}
+
+.feynman {
+  display: flex;
+  position: relative;
+  padding-top: 100px;
+  background-image: url('/images/feynman.png');
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  background-size: 867px 637px;
+  height: 890px;
+  flex-direction: column;
+  align-items: center;
+  background-color:#f2f2f2;
+
+}
+
+.feynman__title {
+  width: 648px;
+  text-align: center;
+  margin-bottom: 70px;
+  margin-top: 0;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+}
+
+.feynman__subtitle {
+  margin: 0;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  position: absolute;
+  right: 48px;
+}
