--- a/styles/style.css
+++ b/styles/style.css
@@ -30,11 +30,6 @@
   margin-top: 80px;
 }
 
-
-div {
-  border: 2px solid lightblue;
-}
-
 .logo {
   display: flex;
 }
@@ -130,7 +125,6 @@ div {
   box-sizing: content-box;
   width: 80%;
   height: min-content;
-  border: 2px solid #2f80ed;
   justify-content: space-between;
   flex-direction: row;
   align-items: flex-start;
@@ -174,12 +168,14 @@ div {
 
 .digits {
   display: flex;
-  padding: 100px 0 100px 0;
   flex-direction: column;
-  align-items: center;
+  padding: 100px 0 100px 0;
+  justify-content: center;
 }
 
 .section-title {
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   width: 60%;
   margin-bottom: 20px;
@@ -202,6 +198,8 @@ div {
 
 .section-subtitle {
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   width: 60%;
   margin-top: 0;
   margin-bottom: 0;
@@ -273,6 +271,8 @@ div {
   margin: 0;
   gap: 80px 0;
   z-index: 1;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .feynman {
@@ -325,17 +325,19 @@ div {
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
   padding-bottom: 90px;
   overflow: hidden;
-  border: 3px solid #9b2fed;
 }
 
 .kaufman__triangle {
   position: absolute;
+  right: -210px;
+  top: 0;
+  background-size: contain;
   background-image: url('/images/kaufman-triangle.svg');
-  background-size: 877px 877px;
-  right: -210;
+  width: 877px;
+  height: 877px;
 }
 
 .footer {
@@ -353,7 +355,23 @@ div {
   width: 90%;
   flex-direction: row;
   justify-content: space-between;
+}
 
+.footer__column-links {
+  display: flex;
+  padding-left: 0;
+  flex-direction: column;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  list-style: none;
+}
+
+.footer__column-link {
+  display: flex;
+  align-items: center;
+  color: white;
+  text-decoration: none;
 }
 
 .footer__column-heading {
@@ -381,20 +399,6 @@ div {
   flex-direction: column;
 }
 
-.footer__column-links {
-  display: flex;
-  margin-bottom: 16px;
-  flex-direction: column;
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-}
-
-.footer__column-link {
-  display: flex;
-  align-items: center;
-}
-
 .footer__social-icon {
   margin-right: 10px;
   width: 16px;
@@ -408,4 +412,3 @@ div {
   font-size: 18px;
   font-weight: normal;
 }
-
