--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@
   position: absolute;
   width: 228px;
   height: 32px;
-  background-image: url('/images/logo_place_header.svg');
+  background-image: url('../images/logo_place_header.svg');
   background-repeat: no-repeat;
   justify-content: start;
   top: 30px;
@@ -37,7 +37,7 @@
 }
 
 .logo_place_footer {
-  background-image: url('/images/logo_place_footer.svg');
+  background-image: url('../images/logo_place_footer.svg');
   background-size: contain;
   width: 228px;
   height: 34px;
@@ -228,6 +228,7 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
+  color: white;
 }
 
 .table__text {
@@ -240,6 +241,7 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  color: white;
 }
 
 .table__text:last-of-type {
@@ -259,7 +261,7 @@
   display: flex;
   position: relative;
   padding-top: 100px;
-  background-image: url('/images/feynman.png');
+  background-image: url('../images/feynman.png');
   background-repeat: no-repeat;
   background-position: bottom left;
   background-size: 867px 637px;
@@ -315,7 +317,7 @@
   right: -210px;
   top: 0;
   background-size: contain;
-  background-image: url('/images/kaufman-triangle.svg');
+  background-image: url('../images/kaufman-triangle.svg');
   width: 877px;
   height: 877px;
 }
