--- a/styles/style.css
+++ b/styles/style.css
@@ -44,15 +44,13 @@
 }
 
 .header__title {
-  position: absolute;
-  left: 64px;
   width: 730px;
   align-self: center;
   z-index: 3;
   font-size: 102px;
   line-height: 96px;
   font-weight: 600;
-  margin: 0;
+  margin: 0 0 0 64px;
 }
 
 .header__subtitle {
