--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
   height: 100vh;
   display: flex;
   min-height: 600px;
-  min-width: 756px;
+  max-height: 756px;
   position: relative;
   background-color: #f2f2f2;
   /* выше установили ограничения для секции */
@@ -89,7 +89,7 @@
   height: 568px;
   right: 0;
   bottom: 0;
-  margin-top: 64px;
+  top: 64px;
   z-index: 0;
 }
 
@@ -103,7 +103,6 @@
   display: flex;
   box-sizing: content-box;
   width: 80%;
-  height: min-content;
   justify-content: space-between;
   flex-direction: row;
   align-items: flex-start;
@@ -117,6 +116,7 @@
   font-weight: normal;
   width: 175px;
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 .two-columns__main-text {
@@ -197,6 +197,8 @@
 
 .table {
   display: flex;
+  list-style: none;
+  padding: 0;
   padding-top: 60px;
   margin: 0 auto 0 auto;
   width: 1100px;
@@ -204,6 +206,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   gap: 60px 0;
+
 }
 
 .table__cell {
@@ -233,6 +236,8 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin-bottom: 20px;
+  margin-top: 0;
 }
 
 .table__text_theme_dark {
@@ -263,10 +268,10 @@
   background-repeat: no-repeat;
   background-position: bottom left;
   background-size: 867px 637px;
-  height: 890px;
+  min-height: 890px;
   flex-direction: column;
   align-items: center;
-  background-color:#f2f2f2;
+  background-color: #f2f2f2;
   border: 0;
 
 }
@@ -301,7 +306,7 @@
 }
 
 .kaufman {
-  background-color:  #1f1f1f;
+  background-color: #1f1f1f;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -322,11 +327,12 @@
 
 .footer {
   display: flex;
-  min-height:  350px;
+  min-height: 350px;
   justify-content: center;
   background-color: #1f1f1f;
   padding-top: 60px;
   padding-bottom: 40px;
+  box-sizing: border-box;
   color: white;
 }
 
@@ -345,6 +351,8 @@
   font-size: 18px;
   font-weight: normal;
   list-style: none;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .footer__column-link {
@@ -362,21 +370,14 @@
   font-weight: 600;
 }
 
-.footer__column_content_copyright {
+.footer__column {
   display: flex;
   flex-direction: column;
+}
+
+.footer__column_content_copyright {
   justify-content: space-between;
   flex-basis: 711px;
-}
-
-.footer__column_content_info {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer__column_content_social {
-  display: flex;
-  flex-direction: column;
 }
 
 .footer__social-icon {
