--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,7 @@
 .feynman {
   display: flex;
   position: relative;
+  box-sizing: border-box;
   padding-top: 100px;
   background-image: url('../../images/feynman.png');
   background-repeat: no-repeat;
