--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -2,7 +2,7 @@
   position: absolute;
   width: 765px;
   height: 608px;
-  bottom: 0px;
+  bottom: 0;
   right: 0;
-  z-index: 1;
+  object-fit:cover;
 }
