--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -2,10 +2,10 @@
   position: absolute;
   right: -210px;
   top: 0;
+  z-index: -1;
   background-size: contain;
   background-image: url('../../../images/kaufman-triangle.svg');
   width: 877px;
   height: 877px;
-  animation: rotation 20s linear infinite;
 }
 
