--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,6 +1,7 @@
 .khan__book-pic {
   margin: 0 48px 0 0;
-  height: 620px;
-  width: 608px;
-  overflow: hidden;
+  height: 608px;
+  width: 620px;
+  object-fit: cover;
+  object-position: top;
 }
