--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -1,6 +1,9 @@
 .resources__link {
   display: flex;
-  width: 270px;
-  height: 38px;
   justify-content: center;
+}
+
+.resources__link:hover {
+  opacity: 0.5;
+  transition: opacity 0.5s ease;
 }
